colocado comentário, na estrutura do banco, na coluna "Reserva", implementado services, controllers, routes e validates para os jogadores times e ajustado documentação
