# src/routes/index.js
@@ -3,6 +3,7 @@ const Mapa = require('./mapa')
 const Time = require('./time')
 const Agente = require('./agente');
 const Camp = require('./camp')
+const JogadoresTimes = require('./jogadoresTimes')
 
 module.exports = (app) => {
     Usuario(app)
@@ -10,4 +11,5 @@ module.exports = (app) => {
     Time(app)
     Agente(app)
     Camp(app)
+    JogadoresTimes(app)
 }
